# fred-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/fred_mcp/: __init__.py  __main__.py  client.py  server.py
src/fred_mcp/tools/: categories.py  geo.py  releases.py  series.py  sources.py  tags.py
tests/: conftest.py  test_client.py  test_integration.py  test_tools.py
