[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fred-mcp"
version = "0.1.0"
description = "MCP server for the FRED (Federal Reserve Economic Data) API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
fred-mcp = "fred_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fred_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
