[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fred-mcp-server"
version = "0.2.1"
description = "MCP server for the FRED (Federal Reserve Economic Data) API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Florian Caro" },
]
keywords = ["mcp", "fred", "economics", "federal-reserve", "economic-data", "api", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp>=3.0,<4",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/floriancaro/fred-mcp-server"
Repository = "https://github.com/floriancaro/fred-mcp-server"
Issues = "https://github.com/floriancaro/fred-mcp-server/issues"
Changelog = "https://github.com/floriancaro/fred-mcp-server/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
fred-mcp-server = "fred_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fred_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() in defaults is idiomatic for FastMCP

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
